<resources>

    //------------------------------------------------------------------------------------------
    //                                DB Populator
    //------------------------------------------------------------------------------------------

    <string name="jsonParsing_vehicle">vehicles</string>
    <string name="jsonParsing_name">name</string>
    <string name="jsonParsing_icon">icon</string>
    <string name="jsonParsing_scadenze">scadenze</string>
    <string name="jsonParsing_name_scadenza">name_scadenza</string>
    <string name="jsonParsing_date">date</string>


    //------------------------------------------------------------------------------------------
    //                                App
    //------------------------------------------------------------------------------------------

    <string name="app_name">ScadenzeAuto</string>
    <string name="activity_vehicles">I miei veicoli</string>
    <string name="activity_scadenze">Scadenze</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Aggiungi un nuovo veicolo</string>
    <string name="add_vehicle_details">Aggiungi nuovo veicolo</string>
    <string name="edit_vehicle_details">Modifica nome veicolo</string>
    <string name="name_hint">Es. Golf serie 7</string>
    <string name="save">Conferma</string>
    <string name="cancel">Annulla</string>
    <string name="insert_error">Inserisci un elemento</string>
    <string name="confirm">Sei sicuro di voler eliminare l\'elemento?</string>
    <string name="add_scadenza_details">Aggiungi nuova scadenza</string>
    <string name="action_scadenza_add">Aggiungi nuova scadenza</string>
    <string name="edit_scadenza_details">Modifica dettagli scadenza</string>
    <string name="type_hint">Revisione</string>
    <string name="date_hint">20/10/2022</string>

<!--    <string name=""></string>

    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>-->

</resources>
