<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbl_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_scadenza_details"
            android:textColor="#000000"
            android:textSize="22dp" />


        <EditText
            android:id="@+id/scadenza_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/type_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:layout_below="@+id/lbl_your_name"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/scadenza_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/date_hint"
            android:layout_below="@+id/scadenza_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <!--        <EditText
            android:id="@+id/txt_quantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/quantity_hint"
            android:layout_below="@+id/txt_ingredient"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />-->

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scadenza_date"
            android:layout_centerVertical="true"
            android:padding="6dp"> <!--to change with android:layout_below="@id/txt_quantity"-->

            <Button
                android:id="@+id/cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_toStartOf="@+id/save"
                android:background="@android:color/transparent"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:text="@string/save" />

        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>