<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/edit_name"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="right|bottom" android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbl_your_name" android:text="@string/add_vehicle_details"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="#000000"
            android:layout_marginTop="16dp" />


        <EditText
            android:id="@+id/vehicle_name"
            android:layout_width="230dp"  android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:imeOptions="actionDone"
            android:hint="@string/name_hint"
            android:layout_below="@+id/lbl_your_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp" />

<!--        <EditText
            android:id="@+id/txt_quantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/quantity_hint"
            android:layout_below="@+id/txt_ingredient"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:padding="6dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/vehicle_name"> <!--to change with android:layout_below="@id/txt_quantity"-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/save"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                style="?android:attr/borderlessButtonStyle"/>

        </RelativeLayout>

<!--        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/txt_quantity"
            android:spinnerMode="dropdown"
            android:clickable="false"
            android:entries="@array/spinnerItems"
            android:layout_alignTop="@+id/txt_quantity"
            android:layout_alignBottom="@+id/txt_quantity"
            android:textAlignment="viewEnd" />-->

    </RelativeLayout>
</FrameLayout>